<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF3EC"
    tools:context=".activity.InformationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/background_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="101dp"
        android:layout_height="83.98dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/TxtName"
        android:layout_width="198dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/online_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:text="@string/username"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtInputUsername"
        app:layout_constraintEnd_toEndOf="@+id/edtInputUsername" />

    <EditText
        android:id="@+id/edtInputUsername"
        android:layout_width="315dp"
        android:layout_height="43dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtName"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/background_btn"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:paddingStart="10dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtInputUsername"
        app:layout_constraintStart_toStartOf="@+id/edtInputUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtInputUsername" />

    <TextView
        android:id="@+id/reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:layout_marginTop="2dp"
        android:textSize="12sp"
        android:text="@string/reject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSend"
        app:layout_constraintTop_toBottomOf="@+id/btnSend"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:text="@string/please_enter_username"
        android:textColor="#CF3C3C"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edtInputUsername"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtInputUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtInputUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>