<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF3EC"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="101dp"
        android:layout_height="83.98dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <ImageView
        android:id="@+id/TxtName"
        android:layout_width="198dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/online_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TxtName"
        app:layout_constraintStart_toStartOf="@+id/TxtName"
        app:layout_constraintTop_toBottomOf="@+id/TxtName"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/storeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onlineShop"
            android:textColor="#101219"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/onlineStoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onlineShop2"
            android:textColor="#EF472C"
            android:textSize="18sp"
            android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/storeTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:text="@string/txtLogin"
        android:textColor="#555353"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:text="@string/email"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtInputEmail"
        android:layout_width="315dp"
        android:layout_height="43dp"
        android:paddingStart="10dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        android:paddingEnd="10dp"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:hint="@string/enter_email"
        android:background="@drawable/background_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintVertical_bias="0.0"
        />

    /



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_btn"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:paddingStart="10dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtInputEmail"
        app:layout_constraintStart_toStartOf="@+id/edtInputEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtInputEmail" />

    <TextView
        android:id="@+id/txtSendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans_x_fa_num_extra_bold"
        android:textColor="#6F6D6D"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edtInputEmail"
        app:layout_constraintEnd_toEndOf="@+id/edtInputEmail"
        app:layout_constraintStart_toStartOf="@+id/edtInputEmail"
        tools:text="کد 4 رقمی ارسال شده به elahelootfi97@gmail.com خود را وارد\n کنید" />




</androidx.constraintlayout.widget.ConstraintLayout>